arena/lang/y.output
   0  $accept : start $end

   1  start : package_opt imports_opt declaration

   2  package_opt :

   3  $$1 :

   4  package_opt : T_PACKAGE $$1 qualifiedname ';'

   5  imports_opt :
   6              | imports

   7  imports : import
   8          | imports import

   9  $$2 :

  10  import : T_IMPORT $$2 importtype T_WORD '.' importname ';'

  11  importtype :
  12             | T_STATIC
  13             | T_NATIVE

  14  importname : T_WORD
  15             | '*'
  16             | T_WORD '.' importname

  17  qualifiedname : T_WORD
  18                | T_WORD '.' qualifiedname

  19  $$3 :

  20  declaration : decorations T_CLASS $$3 typename classparents_opt implements_opt '{' classbody '}'

  21  $$4 :

  22  declaration : decorations T_ENUM $$4 typename classparents_opt implements_opt '{' enumbody '}'

  23  $$5 :

  24  declaration : decorations T_INTERFACE $$5 typename interfaceparents_opt '{' classbody '}'

  25  classparents_opt :
  26                   | T_EXTENDS typename

  27  implements_opt :
  28                 | T_IMPLEMENTS name_list

  29  interfaceparents_opt :
  30                       | T_EXTENDS name_list

  31  classbody_opt :
  32                | '{' classbody '}'

  33  classbody : classbody classmember
  34            |

  35  classmember : field
  36              | method
  37              | T_STATIC '{' statements_opt '}'

  38  enumbody : enummembers ';' classbody
  39           | enummembers
  40           |

  41  enummembers : enummember
  42              | enummembers ',' enummember

  43  $$6 :

  44  enummember : T_WORD $$6 classbody_opt

  45  $$7 :

  46  enummember : T_WORD $$7 '(' expression ')' classbody_opt

  47  field : decorations typeref T_VARIABLE initialization_opt ';'
  48        | decorations typeref property '{' getsets '}'

  49  property : T_WORD
  50           | T_WORD '[' arguments ']'

  51  getsets : getset
  52          | getsets getset

  53  getset : T_WORD T_VARIABLE
  54         | T_WORD T_WORD '(' ')'
  55         | T_WORD '{' statements_opt '}'

  56  initialization_opt :
  57                     | '=' expression

  58  $$8 :

  59  method : decorations typeref T_WORD '(' $$8 arguments_opt ')' throws_opt methodbody

  60  $$9 :

  61  method : decorations T_WORD '(' $$9 arguments_opt ')' throws_opt methodbody

  62  $$10 :

  63  method : decorations typeref T_OPERATOR operator '(' $$10 arguments_opt ')' throws_opt methodbody

  64  decorations : '[' annotations ']' modifiers_opt
  65              | modifiers_opt

  66  annotations : annotation
  67              | annotations ',' annotation

  68  annotation : '@' qualifiedname
  69             | '@' qualifiedname '(' literal ')'
  70             | '@' qualifiedname '(' annotationmembers ')'

  71  annotationmembers : annotationmember
  72                    | annotationmembers ',' annotationmember

  73  annotationmember : T_WORD '=' literal

  74  methodbody : ';'
  75             | '{' statements_opt '}'

  76  arguments_opt :
  77                | arguments

  78  arguments : argument
  79            | arguments ',' argument

  80  argument : typeref T_VARIABLE initialization_opt
  81           | typeref T_DOTS '.' T_VARIABLE

  82  throws_opt :
  83             | T_THROWS name_list

  84  operator : '+'
  85           | '-'
  86           | '*'
  87           | '/'
  88           | '%'
  89           | '~'

  90  statements_opt :
  91                 | statements

  92  statements : statement
  93             | statements statement

  94  $$11 :

  95  statement : T_RETURN $$11 expression_opt ';'

  96  $$12 :

  97  statement : T_IF $$12 '(' expression ')' block else_opt

  98  $$13 :

  99  statement : T_FOR $$13 '(' expressionlist_opt ';' expressionlist_opt ';' expressionlist_opt ')' block

 100  $$14 :

 101  statement : T_FOREACH $$14 '(' T_VARIABLE T_IN expression ')' block

 102  $$15 :

 103  statement : T_WHILE $$15 '(' expression ')' block

 104  $$16 :

 105  statement : T_DO $$16 block T_WHILE '(' expression ')' ';'

 106  $$17 :

 107  statement : T_SWITCH $$17 '(' expression ')' '{' cases_opt '}'

 108  $$18 :

 109  statement : T_TRY '{' $$18 statements_opt '}' handleexception

 110  $$19 :

 111  statement : T_BREAK $$19 ';'

 112  $$20 :

 113  statement : T_CONTINUE $$20 ';'

 114  $$21 :

 115  statement : T_THROW $$21 expression ';'
 116            | expression ';'

 117  cases_opt :
 118            | cases

 119  cases : case
 120        | cases case

 121  $$22 :

 122  case : T_CASE $$22 expression ':' statements_opt

 123  $$23 :

 124  case : T_DEFAULT $$23 ':' statements_opt

 125  block : statement
 126        | '{' statements_opt '}'

 127  else_opt :

 128  $$24 :

 129  else_opt : T_ELSE $$24 block

 130  handleexception : catches finally_opt
 131                  | finally

 132  catches : catch
 133          | catches catch

 134  $$25 :

 135  catch : T_CATCH $$25 '(' catchtype T_VARIABLE ')' '{' statements_opt '}'

 136  catchtype : typename
 137            | catchtype '|' typename

 138  finally_opt :
 139              | finally

 140  $$26 :

 141  finally : T_FINALLY $$26 '{' statements_opt '}'

 142  expressionlist_opt :
 143                     | expressionlist

 144  expressionlist : expression
 145                 | expressionlist ',' expression

 146  expression_opt :
 147                 | expression

 148  instancecreation : typeref '(' expressionlist_opt ')' classbody_opt
 149                   | qualifiedname '[' ']' '{' expressionlist_opt '}'

 150  staticmember : T_VARIABLE
 151               | T_WORD '(' expressionlist_opt ')'
 152               | T_WORD
 153               | T_CLASS

 154  expression : literal chain_opt

 155  $$27 :

 156  expression : T_VARIABLE $$27 chain_opt

 157  $$28 :

 158  expression : T_NEW $$28 instancecreation chain_opt

 159  $$29 :

 160  expression : qualifiedname T_DOUBLE_COLON $$29 staticmember chain_opt

 161  $$30 :

 162  expression : T_WORD '(' $$30 expressionlist_opt ')' chain_opt
 163             | '(' expression ')'
 164             | expression T_AS typeref
 165             | assignment
 166             | comparison
 167             | binary_operation
 168             | unary_prefix_operation
 169             | unary_postfix_operation
 170             | expression '?' expression_opt ':' expression
 171             | expression T_BOOLEAN_OR expression
 172             | expression T_BOOLEAN_AND expression
 173             | expression T_INSTANCEOF typename

 174  literal : T_WORD

 175  $$31 :

 176  literal : '[' $$31 map_or_list ']'
 177          | T_NUMBER
 178          | T_HEX
 179          | T_DECIMAL
 180          | T_STRING

 181  map_or_list :
 182              | ':'
 183              | expressionlist
 184              | mapliteral

 185  mapliteral : mapentry
 186             | mapentry ',' mapliteral

 187  mapentry : expression ':' expression

 188  assignment : expression '=' expression
 189             | expression T_ADD_EQUAL expression
 190             | expression T_SUB_EQUAL expression
 191             | expression T_MUL_EQUAL expression
 192             | expression T_DIV_EQUAL expression
 193             | expression T_MOD_EQUAL expression
 194             | expression T_CONCAT_EQUAL expression
 195             | expression T_AND_EQUAL expression
 196             | expression T_OR_EQUAL expression
 197             | expression T_XOR_EQUAL expression
 198             | expression T_SHR '=' expression
 199             | expression T_SHL '=' expression

 200  comparison : expression '<' expression
 201             | expression '>' expression
 202             | expression T_SE expression
 203             | expression T_GE expression
 204             | expression T_EQUALS expression
 205             | expression T_NOT_EQUALS expression

 206  binary_operation : expression '+' expression
 207                   | expression '-' expression
 208                   | expression '*' expression
 209                   | expression '/' expression
 210                   | expression '%' expression
 211                   | expression '~' expression
 212                   | expression '|' expression
 213                   | expression '&' expression
 214                   | expression '^' expression
 215                   | expression T_SHR expression
 216                   | expression T_SHL expression

 217  unary_prefix_operation : '!' expression
 218                         | '~' expression
 219                         | '+' expression
 220                         | '-' expression
 221                         | T_INC expression
 222                         | T_DEC expression

 223  unary_postfix_operation : expression T_INC
 224                          | expression T_DEC

 225  chain_opt :
 226            | chained

 227  chained : chain
 228          | chain chained

 229  $$32 :

 230  chain : '[' $$32 expression_opt ']'
 231        | '.' member

 232  $$33 :

 233  chain : '.' member '(' $$33 expressionlist_opt ')'

 234  member : T_WORD
 235         | T_IN

 236  typeref : typename
 237          | arraytype

 238  typename : qualifiedname
 239           | qualifiedname '<' typeparameters '>'

 240  arraytype : qualifiedname '[' ']'

 241  typeparameters : typeparameter
 242                 | typeparameters ',' typeparameter

 243  typeparameter : typeref
 244                | '?' T_EXTENDS qualifiedname

 245  name_list : typename
 246            | typename ',' name_list

 247  modifiers_opt :
 248                | modifiers

 249  modifiers : modifier
 250            | modifiers modifier

 251  modifier : T_PUBLIC
 252           | T_PROTECTED
 253           | T_PRIVATE
 254           | T_STATIC
 255           | T_ABSTRACT
 256           | T_FINAL
 257           | T_NATIVE
 258           | T_INLINE

state 0
	$accept : . start $end  (0)
	package_opt : .  (2)

	T_PACKAGE  shift 1
	'['  reduce 2
	T_PUBLIC  reduce 2
	T_PRIVATE  reduce 2
	T_PROTECTED  reduce 2
	T_STATIC  reduce 2
	T_FINAL  reduce 2
	T_ABSTRACT  reduce 2
	T_NATIVE  reduce 2
	T_INLINE  reduce 2
	T_CLASS  reduce 2
	T_INTERFACE  reduce 2
	T_ENUM  reduce 2
	T_IMPORT  reduce 2

	start  goto 2
	package_opt  goto 3


state 1
	package_opt : T_PACKAGE . $$1 qualifiedname ';'  (4)
	$$1 : .  (3)

	.  reduce 3

	$$1  goto 4


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : package_opt . imports_opt declaration  (1)
	imports_opt : .  (5)

	T_IMPORT  shift 5
	'['  reduce 5
	T_PUBLIC  reduce 5
	T_PRIVATE  reduce 5
	T_PROTECTED  reduce 5
	T_STATIC  reduce 5
	T_FINAL  reduce 5
	T_ABSTRACT  reduce 5
	T_NATIVE  reduce 5
	T_INLINE  reduce 5
	T_CLASS  reduce 5
	T_INTERFACE  reduce 5
	T_ENUM  reduce 5

	imports_opt  goto 6
	imports  goto 7
	import  goto 8


state 4
	package_opt : T_PACKAGE $$1 . qualifiedname ';'  (4)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 10


state 5
	import : T_IMPORT . $$2 importtype T_WORD '.' importname ';'  (10)
	$$2 : .  (9)

	.  reduce 9

	$$2  goto 11


state 6
	start : package_opt imports_opt . declaration  (1)
	modifiers_opt : .  (247)

	'['  shift 12
	T_PUBLIC  shift 13
	T_PRIVATE  shift 14
	T_PROTECTED  shift 15
	T_STATIC  shift 16
	T_FINAL  shift 17
	T_ABSTRACT  shift 18
	T_NATIVE  shift 19
	T_INLINE  shift 20
	T_CLASS  reduce 247
	T_INTERFACE  reduce 247
	T_ENUM  reduce 247

	declaration  goto 21
	decorations  goto 22
	modifiers_opt  goto 23
	modifiers  goto 24
	modifier  goto 25


state 7
	imports_opt : imports .  (6)
	imports : imports . import  (8)

	T_IMPORT  shift 5
	'['  reduce 6
	T_PUBLIC  reduce 6
	T_PRIVATE  reduce 6
	T_PROTECTED  reduce 6
	T_STATIC  reduce 6
	T_FINAL  reduce 6
	T_ABSTRACT  reduce 6
	T_NATIVE  reduce 6
	T_INLINE  reduce 6
	T_CLASS  reduce 6
	T_INTERFACE  reduce 6
	T_ENUM  reduce 6

	import  goto 26


state 8
	imports : import .  (7)

	.  reduce 7


state 9
	qualifiedname : T_WORD .  (17)
	qualifiedname : T_WORD . '.' qualifiedname  (18)

	'.'  shift 27
	','  reduce 17
	'='  reduce 17
	T_ADD_EQUAL  reduce 17
	T_SUB_EQUAL  reduce 17
	T_MUL_EQUAL  reduce 17
	T_DIV_EQUAL  reduce 17
	T_CONCAT_EQUAL  reduce 17
	T_MOD_EQUAL  reduce 17
	T_SHR  reduce 17
	T_SHL  reduce 17
	T_AND_EQUAL  reduce 17
	T_OR_EQUAL  reduce 17
	T_XOR_EQUAL  reduce 17
	'?'  reduce 17
	':'  reduce 17
	T_BOOLEAN_OR  reduce 17
	T_BOOLEAN_AND  reduce 17
	'|'  reduce 17
	'^'  reduce 17
	'&'  reduce 17
	T_EQUALS  reduce 17
	T_NOT_EQUALS  reduce 17
	'<'  reduce 17
	T_SE  reduce 17
	'>'  reduce 17
	T_GE  reduce 17
	'+'  reduce 17
	'-'  reduce 17
	'*'  reduce 17
	'/'  reduce 17
	'%'  reduce 17
	T_INSTANCEOF  reduce 17
	'~'  reduce 17
	T_INC  reduce 17
	T_DEC  reduce 17
	'['  reduce 17
	T_AS  reduce 17
	T_WORD  reduce 17
	T_EXTENDS  reduce 17
	T_IMPLEMENTS  reduce 17
	T_OPERATOR  reduce 17
	T_DOTS  reduce 17
	T_VARIABLE  reduce 17
	T_DOUBLE_COLON  reduce 17
	';'  reduce 17
	'{'  reduce 17
	'}'  reduce 17
	'('  reduce 17
	')'  reduce 17
	']'  reduce 17


state 10
	package_opt : T_PACKAGE $$1 qualifiedname . ';'  (4)

	';'  shift 28
	.  error


state 11
	import : T_IMPORT $$2 . importtype T_WORD '.' importname ';'  (10)
	importtype : .  (11)

	T_STATIC  shift 29
	T_NATIVE  shift 30
	T_WORD  reduce 11

	importtype  goto 31


state 12
	decorations : '[' . annotations ']' modifiers_opt  (64)

	'@'  shift 32
	.  error

	annotations  goto 33
	annotation  goto 34


state 13
	modifier : T_PUBLIC .  (251)

	.  reduce 251


state 14
	modifier : T_PRIVATE .  (253)

	.  reduce 253


state 15
	modifier : T_PROTECTED .  (252)

	.  reduce 252


state 16
	modifier : T_STATIC .  (254)

	.  reduce 254


state 17
	modifier : T_FINAL .  (256)

	.  reduce 256


state 18
	modifier : T_ABSTRACT .  (255)

	.  reduce 255


state 19
	modifier : T_NATIVE .  (257)

	.  reduce 257


state 20
	modifier : T_INLINE .  (258)

	.  reduce 258


state 21
	start : package_opt imports_opt declaration .  (1)

	.  reduce 1


state 22
	declaration : decorations . T_CLASS $$3 typename classparents_opt implements_opt '{' classbody '}'  (20)
	declaration : decorations . T_ENUM $$4 typename classparents_opt implements_opt '{' enumbody '}'  (22)
	declaration : decorations . T_INTERFACE $$5 typename interfaceparents_opt '{' classbody '}'  (24)

	T_CLASS  shift 35
	T_INTERFACE  shift 36
	T_ENUM  shift 37
	.  error


state 23
	decorations : modifiers_opt .  (65)

	.  reduce 65


state 24
	modifiers_opt : modifiers .  (248)
	modifiers : modifiers . modifier  (250)

	T_PUBLIC  shift 13
	T_PRIVATE  shift 14
	T_PROTECTED  shift 15
	T_STATIC  shift 16
	T_FINAL  shift 17
	T_ABSTRACT  shift 18
	T_NATIVE  shift 19
	T_INLINE  shift 20
	T_WORD  reduce 248
	T_CLASS  reduce 248
	T_INTERFACE  reduce 248
	T_ENUM  reduce 248

	modifier  goto 38


state 25
	modifiers : modifier .  (249)

	.  reduce 249


state 26
	imports : imports import .  (8)

	.  reduce 8


state 27
	qualifiedname : T_WORD '.' . qualifiedname  (18)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 39


state 28
	package_opt : T_PACKAGE $$1 qualifiedname ';' .  (4)

	.  reduce 4


state 29
	importtype : T_STATIC .  (12)

	.  reduce 12


state 30
	importtype : T_NATIVE .  (13)

	.  reduce 13


state 31
	import : T_IMPORT $$2 importtype . T_WORD '.' importname ';'  (10)

	T_WORD  shift 40
	.  error


state 32
	annotation : '@' . qualifiedname  (68)
	annotation : '@' . qualifiedname '(' literal ')'  (69)
	annotation : '@' . qualifiedname '(' annotationmembers ')'  (70)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 41


state 33
	decorations : '[' annotations . ']' modifiers_opt  (64)
	annotations : annotations . ',' annotation  (67)

	','  shift 42
	']'  shift 43
	.  error


state 34
	annotations : annotation .  (66)

	.  reduce 66


state 35
	declaration : decorations T_CLASS . $$3 typename classparents_opt implements_opt '{' classbody '}'  (20)
	$$3 : .  (19)

	.  reduce 19

	$$3  goto 44


state 36
	declaration : decorations T_INTERFACE . $$5 typename interfaceparents_opt '{' classbody '}'  (24)
	$$5 : .  (23)

	.  reduce 23

	$$5  goto 45


state 37
	declaration : decorations T_ENUM . $$4 typename classparents_opt implements_opt '{' enumbody '}'  (22)
	$$4 : .  (21)

	.  reduce 21

	$$4  goto 46


state 38
	modifiers : modifiers modifier .  (250)

	.  reduce 250


state 39
	qualifiedname : T_WORD '.' qualifiedname .  (18)

	.  reduce 18


state 40
	import : T_IMPORT $$2 importtype T_WORD . '.' importname ';'  (10)

	'.'  shift 47
	.  error


state 41
	annotation : '@' qualifiedname .  (68)
	annotation : '@' qualifiedname . '(' literal ')'  (69)
	annotation : '@' qualifiedname . '(' annotationmembers ')'  (70)

	'('  shift 48
	','  reduce 68
	']'  reduce 68


state 42
	annotations : annotations ',' . annotation  (67)

	'@'  shift 32
	.  error

	annotation  goto 49


state 43
	decorations : '[' annotations ']' . modifiers_opt  (64)
	modifiers_opt : .  (247)

	T_PUBLIC  shift 13
	T_PRIVATE  shift 14
	T_PROTECTED  shift 15
	T_STATIC  shift 16
	T_FINAL  shift 17
	T_ABSTRACT  shift 18
	T_NATIVE  shift 19
	T_INLINE  shift 20
	T_WORD  reduce 247
	T_CLASS  reduce 247
	T_INTERFACE  reduce 247
	T_ENUM  reduce 247

	modifiers_opt  goto 50
	modifiers  goto 24
	modifier  goto 25


state 44
	declaration : decorations T_CLASS $$3 . typename classparents_opt implements_opt '{' classbody '}'  (20)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 51
	typename  goto 52


state 45
	declaration : decorations T_INTERFACE $$5 . typename interfaceparents_opt '{' classbody '}'  (24)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 51
	typename  goto 53


state 46
	declaration : decorations T_ENUM $$4 . typename classparents_opt implements_opt '{' enumbody '}'  (22)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 51
	typename  goto 54


state 47
	import : T_IMPORT $$2 importtype T_WORD '.' . importname ';'  (10)

	'*'  shift 55
	T_WORD  shift 56
	.  error

	importname  goto 57


state 48
	annotation : '@' qualifiedname '(' . literal ')'  (69)
	annotation : '@' qualifiedname '(' . annotationmembers ')'  (70)

	'['  shift 58
	T_WORD  shift 59
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	.  error

	literal  goto 64
	annotationmembers  goto 65
	annotationmember  goto 66


state 49
	annotations : annotations ',' annotation .  (67)

	.  reduce 67


state 50
	decorations : '[' annotations ']' modifiers_opt .  (64)

	.  reduce 64


51: shift/reduce conflict (shift 67, reduce 238) on '<'
state 51
	typename : qualifiedname .  (238)
	typename : qualifiedname . '<' typeparameters '>'  (239)

	'<'  shift 67
	','  reduce 238
	'='  reduce 238
	T_ADD_EQUAL  reduce 238
	T_SUB_EQUAL  reduce 238
	T_MUL_EQUAL  reduce 238
	T_DIV_EQUAL  reduce 238
	T_CONCAT_EQUAL  reduce 238
	T_MOD_EQUAL  reduce 238
	T_SHR  reduce 238
	T_SHL  reduce 238
	T_AND_EQUAL  reduce 238
	T_OR_EQUAL  reduce 238
	T_XOR_EQUAL  reduce 238
	'?'  reduce 238
	':'  reduce 238
	T_BOOLEAN_OR  reduce 238
	T_BOOLEAN_AND  reduce 238
	'|'  reduce 238
	'^'  reduce 238
	'&'  reduce 238
	T_EQUALS  reduce 238
	T_NOT_EQUALS  reduce 238
	T_SE  reduce 238
	'>'  reduce 238
	T_GE  reduce 238
	'+'  reduce 238
	'-'  reduce 238
	'*'  reduce 238
	'/'  reduce 238
	'%'  reduce 238
	T_INSTANCEOF  reduce 238
	'~'  reduce 238
	T_INC  reduce 238
	T_DEC  reduce 238
	T_AS  reduce 238
	T_EXTENDS  reduce 238
	T_IMPLEMENTS  reduce 238
	T_VARIABLE  reduce 238
	';'  reduce 238
	'{'  reduce 238
	'}'  reduce 238
	')'  reduce 238
	']'  reduce 238


state 52
	declaration : decorations T_CLASS $$3 typename . classparents_opt implements_opt '{' classbody '}'  (20)
	classparents_opt : .  (25)

	T_EXTENDS  shift 68
	T_IMPLEMENTS  reduce 25
	'{'  reduce 25

	classparents_opt  goto 69


state 53
	declaration : decorations T_INTERFACE $$5 typename . interfaceparents_opt '{' classbody '}'  (24)
	interfaceparents_opt : .  (29)

	T_EXTENDS  shift 70
	'{'  reduce 29

	interfaceparents_opt  goto 71


state 54
	declaration : decorations T_ENUM $$4 typename . classparents_opt implements_opt '{' enumbody '}'  (22)
	classparents_opt : .  (25)

	T_EXTENDS  shift 68
	T_IMPLEMENTS  reduce 25
	'{'  reduce 25

	classparents_opt  goto 72


state 55
	importname : '*' .  (15)

	.  reduce 15


state 56
	importname : T_WORD .  (14)
	importname : T_WORD . '.' importname  (16)

	'.'  shift 73
	';'  reduce 14


state 57
	import : T_IMPORT $$2 importtype T_WORD '.' importname . ';'  (10)

	';'  shift 74
	.  error


state 58
	literal : '[' . $$31 map_or_list ']'  (176)
	$$31 : .  (175)

	.  reduce 175

	$$31  goto 75


state 59
	annotationmember : T_WORD . '=' literal  (73)
	literal : T_WORD .  (174)

	'='  shift 76
	')'  reduce 174


state 60
	literal : T_STRING .  (180)

	.  reduce 180


state 61
	literal : T_NUMBER .  (177)

	.  reduce 177


state 62
	literal : T_DECIMAL .  (179)

	.  reduce 179


state 63
	literal : T_HEX .  (178)

	.  reduce 178


state 64
	annotation : '@' qualifiedname '(' literal . ')'  (69)

	')'  shift 77
	.  error


state 65
	annotation : '@' qualifiedname '(' annotationmembers . ')'  (70)
	annotationmembers : annotationmembers . ',' annotationmember  (72)

	','  shift 78
	')'  shift 79
	.  error


state 66
	annotationmembers : annotationmember .  (71)

	.  reduce 71


state 67
	typename : qualifiedname '<' . typeparameters '>'  (239)

	'?'  shift 80
	T_WORD  shift 9
	.  error

	qualifiedname  goto 81
	typename  goto 82
	typeref  goto 83
	arraytype  goto 84
	typeparameters  goto 85
	typeparameter  goto 86


state 68
	classparents_opt : T_EXTENDS . typename  (26)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 51
	typename  goto 87


state 69
	declaration : decorations T_CLASS $$3 typename classparents_opt . implements_opt '{' classbody '}'  (20)
	implements_opt : .  (27)

	T_IMPLEMENTS  shift 88
	'{'  reduce 27

	implements_opt  goto 89


state 70
	interfaceparents_opt : T_EXTENDS . name_list  (30)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 51
	typename  goto 90
	name_list  goto 91


state 71
	declaration : decorations T_INTERFACE $$5 typename interfaceparents_opt . '{' classbody '}'  (24)

	'{'  shift 92
	.  error


state 72
	declaration : decorations T_ENUM $$4 typename classparents_opt . implements_opt '{' enumbody '}'  (22)
	implements_opt : .  (27)

	T_IMPLEMENTS  shift 88
	'{'  reduce 27

	implements_opt  goto 93


state 73
	importname : T_WORD '.' . importname  (16)

	'*'  shift 55
	T_WORD  shift 56
	.  error

	importname  goto 94


state 74
	import : T_IMPORT $$2 importtype T_WORD '.' importname ';' .  (10)

	.  reduce 10


state 75
	literal : '[' $$31 . map_or_list ']'  (176)
	map_or_list : .  (181)

	':'  shift 95
	'+'  shift 96
	'-'  shift 97
	'!'  shift 98
	'~'  shift 99
	T_INC  shift 100
	T_DEC  shift 101
	'['  shift 58
	T_NEW  shift 102
	T_WORD  shift 103
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	T_VARIABLE  shift 104
	'('  shift 105
	']'  reduce 181

	qualifiedname  goto 106
	expression  goto 107
	literal  goto 108
	expressionlist  goto 109
	assignment  goto 110
	comparison  goto 111
	binary_operation  goto 112
	unary_prefix_operation  goto 113
	unary_postfix_operation  goto 114
	map_or_list  goto 115
	mapliteral  goto 116
	mapentry  goto 117


state 76
	annotationmember : T_WORD '=' . literal  (73)

	'['  shift 58
	T_WORD  shift 118
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	.  error

	literal  goto 119


state 77
	annotation : '@' qualifiedname '(' literal ')' .  (69)

	.  reduce 69


state 78
	annotationmembers : annotationmembers ',' . annotationmember  (72)

	T_WORD  shift 120
	.  error

	annotationmember  goto 121


state 79
	annotation : '@' qualifiedname '(' annotationmembers ')' .  (70)

	.  reduce 70


state 80
	typeparameter : '?' . T_EXTENDS qualifiedname  (244)

	T_EXTENDS  shift 122
	.  error


81: shift/reduce conflict (shift 67, reduce 238) on '<'
state 81
	typename : qualifiedname .  (238)
	typename : qualifiedname . '<' typeparameters '>'  (239)
	arraytype : qualifiedname . '[' ']'  (240)

	'<'  shift 67
	'['  shift 123
	','  reduce 238
	'='  reduce 238
	T_ADD_EQUAL  reduce 238
	T_SUB_EQUAL  reduce 238
	T_MUL_EQUAL  reduce 238
	T_DIV_EQUAL  reduce 238
	T_CONCAT_EQUAL  reduce 238
	T_MOD_EQUAL  reduce 238
	T_SHR  reduce 238
	T_SHL  reduce 238
	T_AND_EQUAL  reduce 238
	T_OR_EQUAL  reduce 238
	T_XOR_EQUAL  reduce 238
	'?'  reduce 238
	':'  reduce 238
	T_BOOLEAN_OR  reduce 238
	T_BOOLEAN_AND  reduce 238
	'|'  reduce 238
	'^'  reduce 238
	'&'  reduce 238
	T_EQUALS  reduce 238
	T_NOT_EQUALS  reduce 238
	T_SE  reduce 238
	'>'  reduce 238
	T_GE  reduce 238
	'+'  reduce 238
	'-'  reduce 238
	'*'  reduce 238
	'/'  reduce 238
	'%'  reduce 238
	T_INSTANCEOF  reduce 238
	'~'  reduce 238
	T_INC  reduce 238
	T_DEC  reduce 238
	T_AS  reduce 238
	T_WORD  reduce 238
	T_OPERATOR  reduce 238
	T_DOTS  reduce 238
	T_VARIABLE  reduce 238
	';'  reduce 238
	'}'  reduce 238
	')'  reduce 238
	']'  reduce 238


state 82
	typeref : typename .  (236)

	.  reduce 236


state 83
	typeparameter : typeref .  (243)

	.  reduce 243


state 84
	typeref : arraytype .  (237)

	.  reduce 237


state 85
	typename : qualifiedname '<' typeparameters . '>'  (239)
	typeparameters : typeparameters . ',' typeparameter  (242)

	','  shift 124
	'>'  shift 125
	.  error


state 86
	typeparameters : typeparameter .  (241)

	.  reduce 241


state 87
	classparents_opt : T_EXTENDS typename .  (26)

	.  reduce 26


state 88
	implements_opt : T_IMPLEMENTS . name_list  (28)

	T_WORD  shift 9
	.  error

	qualifiedname  goto 51
	typename  goto 90
	name_list  goto 126


state 89
	declaration : decorations T_CLASS $$3 typename classparents_opt implements_opt . '{' classbody '}'  (20)

	'{'  shift 127
	.  error


state 90
	name_list : typename .  (245)
	name_list : typename . ',' name_list  (246)

	','  shift 128
	';'  reduce 245
	'{'  reduce 245


state 91
	interfaceparents_opt : T_EXTENDS name_list .  (30)

	.  reduce 30


state 92
	declaration : decorations T_INTERFACE $$5 typename interfaceparents_opt '{' . classbody '}'  (24)
	classbody : .  (34)

	.  reduce 34

	classbody  goto 129


state 93
	declaration : decorations T_ENUM $$4 typename classparents_opt implements_opt . '{' enumbody '}'  (22)

	'{'  shift 130
	.  error


state 94
	importname : T_WORD '.' importname .  (16)

	.  reduce 16


state 95
	map_or_list : ':' .  (182)

	.  reduce 182


state 96
	unary_prefix_operation : '+' . expression  (219)

	'+'  shift 96
	'-'  shift 97
	'!'  shift 98
	'~'  shift 99
	T_INC  shift 100
	T_DEC  shift 101
	'['  shift 58
	T_NEW  shift 102
	T_WORD  shift 103
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	T_VARIABLE  shift 104
	'('  shift 105
	.  error

	qualifiedname  goto 106
	expression  goto 131
	literal  goto 108
	assignment  goto 110
	comparison  goto 111
	binary_operation  goto 112
	unary_prefix_operation  goto 113
	unary_postfix_operation  goto 114


state 97
	unary_prefix_operation : '-' . expression  (220)

	'+'  shift 96
	'-'  shift 97
	'!'  shift 98
	'~'  shift 99
	T_INC  shift 100
	T_DEC  shift 101
	'['  shift 58
	T_NEW  shift 102
	T_WORD  shift 103
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	T_VARIABLE  shift 104
	'('  shift 105
	.  error

	qualifiedname  goto 106
	expression  goto 132
	literal  goto 108
	assignment  goto 110
	comparison  goto 111
	binary_operation  goto 112
	unary_prefix_operation  goto 113
	unary_postfix_operation  goto 114


state 98
	unary_prefix_operation : '!' . expression  (217)

	'+'  shift 96
	'-'  shift 97
	'!'  shift 98
	'~'  shift 99
	T_INC  shift 100
	T_DEC  shift 101
	'['  shift 58
	T_NEW  shift 102
	T_WORD  shift 103
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	T_VARIABLE  shift 104
	'('  shift 105
	.  error

	qualifiedname  goto 106
	expression  goto 133
	literal  goto 108
	assignment  goto 110
	comparison  goto 111
	binary_operation  goto 112
	unary_prefix_operation  goto 113
	unary_postfix_operation  goto 114


state 99
	unary_prefix_operation : '~' . expression  (218)

	'+'  shift 96
	'-'  shift 97
	'!'  shift 98
	'~'  shift 99
	T_INC  shift 100
	T_DEC  shift 101
	'['  shift 58
	T_NEW  shift 102
	T_WORD  shift 103
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	T_VARIABLE  shift 104
	'('  shift 105
	.  error

	qualifiedname  goto 106
	expression  goto 134
	literal  goto 108
	assignment  goto 110
	comparison  goto 111
	binary_operation  goto 112
	unary_prefix_operation  goto 113
	unary_postfix_operation  goto 114


state 100
	unary_prefix_operation : T_INC . expression  (221)

	'+'  shift 96
	'-'  shift 97
	'!'  shift 98
	'~'  shift 99
	T_INC  shift 100
	T_DEC  shift 101
	'['  shift 58
	T_NEW  shift 102
	T_WORD  shift 103
	T_STRING  shift 60
	T_NUMBER  shift 61
	T_DECIMAL  shift 62
	T_HEX  shift 63
	T_VARIABLE  shift 104
	'('  shift 105
	.  error
